# poet

./: .gitignore  AGENTS.md  CODEOWNERS  Cargo.toml  Dockerfile  Makefile  README.md  flake.nix  jarmuz-fmt.mjs  jarmuz-generate.mjs  jarmuz-watch-content.mjs  jarmuz-watch.mjs  live-reload-script.js  package-lock.json  package.json  poet.toml  rust-toolchain.toml  tsconfig.tsbuildinfo
.claude/: .gitignore
.config/: nextest.toml
.github/: release.yml
authors/: zagaj-3.toml  zagaj-4.toml  zagaj-second.toml  zagaj.md  zagaj.toml
blogs/: example-blog.toml
content/: index.md
embedding_codec/: Cargo.toml
jarmuz/: job-esbuild.mjs  run-website.mjs  worker-cargo-build-release.mjs  worker-cargo-build.mjs  worker-poet-generate.mjs  worker-poet-watch.mjs  worker-poet.mjs
poet/: Cargo.toml
poet/src/: anyhow_error_aggregate.rs  app_dir_desktop_entry.rs  assert_valid_desktop_entry_string.rs  asset_manager.rs  asset_path_renderer.rs  author.rs  author_basename.rs  author_collection.rs  author_data.rs  author_front_matter.rs  author_resolve_result.rs  blog.rs  blog_collection.rs  blog_config.rs  blog_name.rs  blog_post.rs  blog_post_basename.rs  blog_post_collection.rs  blog_post_front_matter.rs  blog_post_reference.rs  blog_post_source.rs  build_authors.rs  build_content_document_sources.rs  build_content_document_sources_result.rs  build_prompt_document_controller_params.rs  build_timer.rs  compile_shortcodes.rs  content_document.rs  content_document_collection_ranked.rs  content_document_component_context.rs  content_document_hierarchy.rs  content_document_linker.rs  content_document_reference.rs  content_document_tree_node.rs  document_error.rs  document_error_collection.rs  esbuild_metafile_holder.rs  eval_content_document_mdast.rs  eval_mdx_element.rs  eval_prompt_document_mdast.rs  (+32 more)
poet/src/build_project/: build_authors.rs  build_blogs.rs  build_project_params.rs  build_project_result.rs  build_project_result_stub.rs  content_document_rendering_context.rs  mod.rs
poet/src/build_project/build_blogs/: build_blogs_params.rs  mod.rs
poet/src/build_project/build_content/: build_content_params.rs  mod.rs
poet/src/build_prompt_document_controller_collection/: build_prompt_document_controller_collection_params.rs  mod.rs
poet/src/cmd/: builds_project.rs  mod.rs  respond_with_generated_page.rs  service_manager.rs
poet/src/cmd/make/: app_dir.rs  embeddings.rs  mod.rs  static_pages.rs
poet/src/cmd/serve/: app_data.rs  mod.rs
poet/src/cmd/serve/http_route/: generated_pages.rs  mod.rs
poet/src/cmd/value_parser/: parse_socket_addr.rs  validate_is_directory.rs  validate_is_directory_or_create.rs
poet/src/cmd/watch/: app_data.rs  mod.rs  watch_project_files.rs
poet/src/cmd/watch/http_route/: generated_pages.rs  live_reload.rs
poet/src/cmd/watch/service/: esbuild_metafile_reader.rs  filesystem_http_route_index_builder.rs  http_server.rs  mod.rs  project_builder.rs  prompt_controller_collection_builder.rs  search_index_builder.rs
poet/src/content_document_front_matter/: collection_placement.rs  mod.rs
poet/src/filesystem/: file_entry.rs  file_entry_kind.rs  file_entry_stub.rs  memory.rs  mod.rs
poet/src/filesystem/storage/: create_parent_directories.rs  mod.rs
poet/src/generate_embedding/: mod.rs  paddler_embedding_client.rs
poet/src/mcp/: accepts_all.rs  log_level.rs  mcp_responder.rs  mcp_responder_context.rs  mcp_responder_handler.rs  mod.rs  prompt.rs  resource.rs  resource_content.rs  resource_content_parts.rs  resource_list_aggregate.rs  resource_provider_list_params.rs  resource_provider_ordered.rs  resource_reference.rs  session.rs  session_manager.rs  tool_call_error_message.rs  tool_handler.rs  tool_handler_service.rs  tool_registry.rs
poet/src/mcp/content_block/: embedded_resource.rs
poet/src/mcp/jsonrpc/: id.rs  implementation.rs  mod.rs  role.rs  server_to_client_notification.rs
poet/src/mcp/jsonrpc/notification/: initialized.rs  message.rs  mod.rs  resources_list_changed.rs
poet/src/mcp/jsonrpc/request/: initialize.rs  prompts_get.rs  prompts_list.rs  resources_list.rs  resources_read.rs  resources_templates_list.rs  resources_unsubscribe.rs
poet/src/mcp/jsonrpc/response/: error.rs
poet/src/mcp/jsonrpc/response/success/: mod.rs  prompts_list.rs  resource_templates_list.rs  resources_list.rs  tools_list.rs
poet/src/mcp/jsonrpc/response/success/tool_call_result/: mod.rs  success.rs
poet/src/mcp/list_resources_cursor/: deserialize.rs  serialize.rs
poet/src/mcp/mcp_http_service/respond_to_post/handler/: initialize_handler.rs  mod.rs  ping_handler.rs  prompts_get_handler.rs  prompts_list_handler.rs  resources_list_handler.rs  resources_subscribe_handler.rs  resources_templates_list_handler.rs  resources_unsubscribe_handler.rs  tools_call_handler.rs  tools_list_handler.rs
poet/src/parse_markdown_metadata_line/: mod.rs
poet/src/prompt_document_front_matter/: argument.rs  mod.rs
poet/src/rhai_components/: attribute.rs  combine_output_symbols.rs  combine_tag_stack.rs  eval_tag_stack_node.rs  evaluator_factory.rs  mod.rs
poet/src/rhai_helpers/: mod.rs  render_hierarchy.rs
poet/src/table_of_contents/: heading.rs  mod.rs
prompts/: help-me-finish-task.md  search.md
rhai_components/: Cargo.toml
rhai_components/src/: builds_engine.rs  escape_html.rs  escape_html_attribute.rs  lib.rs  rhai_call_template_function.rs  rhai_template_renderer.rs  rhai_template_renderer_params.rs
rhai_components/src/component_syntax/: attribute.rs  attribute_value.rs  combine_output_symbols.rs  combine_tag_stack.rs  component_meta_module.rs  component_reference.rs  component_reference_stub.rs  component_registry.rs  eval_tag.rs  eval_tag_stack_node.rs  evaluator_factory.rs  expression_collection.rs  mod.rs  output_combined_symbol.rs  output_semantic_symbol.rs  output_symbol.rs  parse_component.rs  parser_state.rs  tag.rs  tag_name.rs  tag_stack_node.rs
rhai_components/src/component_syntax/fixtures/: Bare.rhai  LayoutHomepage.rhai  NoTemplate.rhai  ThrowingComponent.rhai
rhai_components/src/rhai_helpers/: clsx.rs  error.rs  has.rs  mod.rs
(+397 files in other folders)
