[package]
description = "Static site generator with optional MCP server and LLM SEO optimizations"
license = "Apache-2.0"
name = "poet"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-rt = "2.10.0"
actix-web = "4.11.0"
actix-web-lab = "0.24.3"
anyhow = { version = "1.0.98", features = ["backtrace"] }
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive"] }
dashmap = "6.1.0"
env_logger = "0.11.8"
esbuild-metafile = "0.2.1"
log = "0.4.27"
markdown = "1.0.0"
mime_guess = "2.0.5"
minijinja = { version = "2.11.0", features = ["builtins", "json", "loader"] }
minijinja-contrib = { version = "2.11.0", features = ["datetime", "pycompat", "wordcount", "wordwrap"] }
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
# rhai = { version = "1.22.2", features = ["no_closure", "serde", "serde_json", "sync"] }
rhai = { git = "https://github.com/rhaiscript/rhai.git", rev = "b24210765033210037b8d02c805400480ccc2a57", features = ["internals", "metadata", "no_closure", "serde", "serde_json", "sync"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.9.5"
url = "2.5.6"

[dev-dependencies]
tempfile = "3.21.0"
