[package]
description = "Static site generator with optional MCP server and LLM SEO optimizations"
license = "Apache-2.0"
name = "poet"
version = "0.3.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-rt = "2.10.0"
actix-web = "4.11.0"
actix-web-lab = "0.24.3"
actix-ws = "0.3.0"
anyhow = { version = "1.0.98", features = ["backtrace"] }
async-stream = "0.3.6"
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive"] }
ctrlc = { version = "3.4.7", features = ["termination"] }
dashmap = "6.1.0"
env_logger = "0.11.8"
esbuild-metafile = "0.5.0"
futures-util = "0.3.31"
itertools = "0.14.0"
log = "0.4.27"
markdown = "1.0.0"
mime_guess = "2.0.5"
nanoid = "0.4.0"
nom = "8.0.0"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
petgraph = { version = "0.8.2", features = ["serde", "serde_derive"] }
rayon = "1.11.0"
# rhai = { version = "1.22.2", features = ["no_closure", "serde", "serde_json", "sync"] }
rhai = { package="poet-rhai", version="0.2.0", features = ["internals", "metadata", "no_closure", "serde", "serde_json", "sync"] }
serde = { version = "1.0.219", features = ["derive"] }
slug = "0.1.6"
syntect = "5.2.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
toml = "0.9.5"
url = "2.5.6"

[dev-dependencies]
tempfile = "3.21.0"
