[workspace]
resolver = "3"
members = ["poet", "rhai_components"]

[workspace.dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-rt = "2.10.0"
actix-web = "4.11.0"
actix-web-lab = "0.24.3"
actix-ws = "0.3.0"
anyhow = { version = "1.0.98", features = ["backtrace"] }
async-stream = "0.3.6"
async-trait = "0.1.89"
base64 = "0.22.1"
blake3 = "1.8.2"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive"] }
ctrlc = { version = "3.4.7", features = ["termination"] }
dashmap = "6.1.0"
env_logger = "0.11.8"
esbuild-metafile = "0.6.3"
freedesktop_entry_parser = "2.0.1"
futures-core = "0.3.31"
futures-util = "0.3.31"
http = "1.3.1"
http-serde = "2.1.1"
indoc = "2.0.6"
itertools = "0.14.0"
log = "0.4.27"
markdown = "1.0.0"
mime = "0.3.17"
mime_guess = "2.0.5"
nanoid = "0.4.0"
nom = "8.0.0"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
petgraph = { version = "0.8.2", features = ["serde", "serde_derive"] }
rayon = { version = "1.11" }
rhai = { version = "1.23.6", features = ["only_i32", "f32_float", "internals", "serde", "sync"] }
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
sitemap-rs = "0.3.0"
slug = "0.1.6"
smartstring = "1.0.1"
syntect = "5.2.0"
tantivy = "0.25.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
toml = "0.9.5"
url = "2.5.6"
uuid = { version = "1.18.1", features = ["rng", "serde", "v4"] }
