[package]
description = "Static site generator with optional MCP server and LLM SEO optimizations"
license = "Apache-2.0"
name = "poet"
version = "0.5.12"
edition = "2024"

[dependencies]
actix = { workspace = true }
actix-cors = { workspace = true }
actix-files = { workspace = true }
actix-rt = { workspace = true }
actix-web = { workspace = true }
actix-web-lab = { workspace = true }
actix-ws = { workspace = true }
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
dashmap = { workspace = true }
env_logger = { workspace = true }
esbuild-metafile = { workspace = true }
freedesktop_entry_parser = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-serde = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
markdown = { workspace = true }
mime = { workspace = true }
mime_guess = { workspace = true }
nom = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
petgraph = { workspace = true }
rayon = { workspace = true }
rhai = { workspace = true }
rhai_components = { path = "../rhai_components", version = "0.5" }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slug = { workspace = true }
smartstring = { workspace = true }
syntect = { workspace = true }
tantivy = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.21.0"
